--- a/index.html
+++ b/index.html
@@ -166,6 +166,8 @@
     Designed & Developed by 
     <a href="https://www.instagram.com/mahyar.sal6" target="_blank" class="designer-name">Mahyar Salehinezhad</a>
 </footer>
+  <script src="https://cdn.counter.dev/script.js" data-id="6501ed89-9136-452b-ac98-a11bf91d1612" data-utcoffset="4"></script>
   <script src="script.js" defer></script>
 </body>
+
 </html>
